<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2014 Google, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="app_name">BasicHistoryApi</string>
    <string name="action_update_session">Update step count data</string>
    <string name="action_delete_session">Delete step count data</string>
    <string name="action_settings">Settings</string>
    <string name="tv_name">ЗАБОТА</string>
    <string name="b_start">НАЧАТЬ</string>
    <string name="N1">Добро пожаловать!</string>
    <string name="N2">Сейчас мы настроим передачу данных\nс ваших устройств и приложений в вашу\nэлектронную медицинскую карту в ЕМИАС</string>
    <string name="N3">Не можете войти?\nСообщить об ошибке</string>
    <string name="N4">Отлично! Ваш аккаунт готов!</string>
    <string name="N5">Актуальные данные теперь всегда\nдоступны вам и вашему лечащему врачу\nв вашей электронной медицинской карте ЕМИАС.\nДаже если приложение не запущено.\nВы можете изменить это в настройках.</string>
    <string name="title_activity_check_data">CheckData</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="check_title1">Проверьте ваши данные</string>
    <string name="N6">Согласен загрузить данные из ЕМИАС</string>
    <string name="N10">Добро пожаловать, Иван!</string>
    <string name="N11">Это вы?</string>
    <string name="N12">Войти в другой аккаунт</string>
    <string name="N7">В приложении “Здоровье” вы можете выбрать данные,\nкоторые хотите добавить или убрать из своей\nмедицинской карты ЕМИАС</string>
    <string name="N8">В приложении “Здоровье” Вы можете обновлять\nданные вручную, добавлять из других приложений или\nустройств и аксессуаров</string>
<<<<<<< HEAD
    <string name="title_activity_profile">profile</string>
    <string name="title_profile">Профиль</string>
    <string name="title_data">Данные</string>
    <string name="title_sources">Источники</string>
=======
    <string name="error">Введённые данные некорректны</string>
>>>>>>> 47edf4304390bd28db4405f805cdc08626c91115
</resources>