<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/N10"
        android:textAppearance="@style/N1"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/primary_col"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />
    <!-- Создайте аккаунт для доступа в систему -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/N11"
        android:textAppearance="@style/N2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/N12"
        android:textAppearance="@style/N2"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/N3"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/maincolor"
        android:text="Да, это я!"
        android:textColor="#fafafa"
        app:layout_constraintBottom_toTopOf="@+id/primary_col"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />


    <!-- Label -->
    <TextView
        android:id="@+id/n6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="464dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="4sp"
        android:text="@string/N3"
        android:textAppearance="@style/N3"
        android:textColor="#053ba6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/primary_col"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/primary_col"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <View
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:background="@drawable/ellipse" />

            <View
                android:layout_width="10sp"
                android:layout_height="10sp"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:background="@drawable/ellipse" />

            <View
                android:layout_width="10sp"
                android:layout_height="10sp"
                android:background="@drawable/ellipse" />
        </LinearLayout>


        <TextView
            android:id="@+id/b_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:fontFamily="Roboto"
            android:text="Далее"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>