<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">


    <TextView
        android:id="@+id/N1"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="@id/N2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="112dp"
        android:text="@string/N1"
        android:textAppearance="@style/N1"
        android:gravity="center_horizontal|top"
        />
    <!-- Создайте аккаунт для доступа в систему -->
    <TextView
        android:id="@+id/N2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/N2"
        android:textAppearance="@style/N2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/N1"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/N3"
        android:layout_width="242dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#053ba6"
        android:text="Войти с ЕМИАС"
        android:textColor="#fafafa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/N2"
        app:layout_constraintVertical_bias="0.32999998" />

    <LinearLayout
        android:id="@+id/N6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/N3"
        app:layout_constraintVertical_bias="0.17000002">

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/N4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:background="#00000000"
            android:text="Привязать TOUCH ID"
            android:textColor="#053ba6"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/N5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/finger" />
    </LinearLayout>

    <!-- Label -->
    <TextView
        android:id="@+id/n6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/N3"
        android:textAppearance="@style/N3"
        android:lineSpacingExtra="4sp"
        android:translationY="-1.8sp"
        android:gravity="center_horizontal|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/N6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#053ba6"
        />




</android.support.constraint.ConstraintLayout>